--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
      <!--DEMO01-->
     <div id="animatedModaldeko" class="popup-modal">
         <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID -->
-        <div id="btn-close-modal" class="close-animatedModal close-popup-modal"> <i class="ion-close-round"></i> </div>
+        <div id="btn-close-modal" class="close-animatedModaldeko close-popup-modal"> <i class="ion-close-round"></i> </div>
         <div class="clearfix"></div>
         <div class="modal-content">
             <div class="container">
