--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 graphics ads">
-                                <a id="demo05" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
+                                <a id="demosecond" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em> </div>
