--- a/index.html
+++ b/index.html
@@ -343,8 +343,9 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2>Geschäfts Eines<br /> Web-Studios</h2>
                         <div class="h-50"></div>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p>I'm part of the professional graphic designer's world 7 years already. The combination of my practical work and solid educational experience has prepared me for showing an immediate contribution to your needs.</p>
+                        <p>My goals as a web and graphic designer have always been to create more usable and elegant produts on the web. My experience and knowlege provide me with the capabilyty to handle and deliver tasks in a beautiful yet effecient way.</p>  
+                        <p>I love to create clean, smart and effective objects and have enthusiasm to find the best communication design solutions.</p>
                         <br />
                         <br /> <img src="img/portfolio/02.jpg" alt="" class="img-responsive" />
                         <br />
