--- a/index.html
+++ b/index.html
@@ -125,12 +125,58 @@
         </div>
     </div>
     <!-- ./experience -->
+
+
+     <!-- skills  -->
+     <div class="section" id="experience">
+        <div class="container">
+            <div class="col-md-12">
+                <h4>03</h4>
+                <h1 class="size-50">My <br /> Design skills</h1>
+                <div class="h-50"></div>
+            </div>
+            <div class="col-md-12">
+                <ul class="timeline">
+                    <li class="timeline-event" data-aos="fade-up">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">April 2016 - Present</p>
+                            <h3>Geil,Danke! GmbH</h3>
+                            <h4>eines Web-Studios</h4>
+                            <p><strong>Projektmanagement mit Scrum</strong>
+                                <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
+                        </div>
+                    </li>
+                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
+                            <h3>Freelancer</h3>
+                            <h4>Designer und Autor</h4>
+                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
+                        </div>
+                    </li>
+                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">April 2014</p>
+                            <h3>konplan gmbh</h3>
+                            <h4>IT-Consultant</h4>
+                            <p><strong>Systemarchitektur, Consulting</strong>
+                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- ./skills -->
     
     <!-- projects -->
     <div class="section" id="projects">
         <div class="container">
             <div class="col-md-12">
-                <h4>03</h4>
+                <h4>04</h4>
                 <h1 class="size-50">My <br /> Projects</h1> 
             </div>
             <!-- main container -->
@@ -290,7 +336,7 @@
     <div class="section" id="contact">
         <div class="container">
             <div class="col-md-12">
-                <h4>04</h4>
+                <h4>05</h4>
                 <h1 class="size-50">Contact  Me</h1>
                 <div class="h-50"></div>
             </div>
