--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h4>01</h4>
                 <h1 class="size-50">Know <br /> About me</h1>
                 <div class="h-50"></div>
-                <p>I'm part of the professional graphic designer's world 7 years already. The combination of my practical work and solid educational experience has prepared me for showing an immediate contribution to your needs.</p>
+                <p>I'm part of the professional graphic designer's world 10 years already. The combination of my practical work and solid educational experience has prepared me for showing an immediate contribution to your needs.</p>
                 <p>My goals as a web and graphic designer have always been to create more usable and elegant produts on the web. My experience and knowlege provide me with the capabilyty to handle and deliver tasks in a beautiful yet effecient way.</p>
                 <p>I love to create clean, smart and effective objects and have enthusiasm to find the best communication design solutions.</p>
                 <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" />
@@ -140,7 +140,7 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2016 - Present</p>
+                            <p class="timeline-event-thumbnail">Adobe Photoshop</p><p class="timeline-event-thumbnail">Adobe Illustrator</p>
                             <h3>Geil,Danke! GmbH</h3>
                             <h4>eines Web-Studios</h4>
                             <p><strong>Projektmanagement mit Scrum</strong>
