--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 
      <!-- skills  -->
-     <div class="section" id="experience">
+     <div class="section" id="experience" style="background: #e4e4e4!important;">
         <div class="container">
             <div class="col-md-12">
                 <h4>03</h4>
