--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="col-md-12">
                 <h4>03</h4>
-                <h1 class="size-50">My <br /> Design skills</h1>
+                <h1 class="size-50">My <br /> Software skills</h1>
                 <div class="h-50"></div>
             </div>
             <div class="col-md-12">
@@ -140,7 +140,7 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">Adobe Photoshop</p><p class="timeline-event-thumbnail">Adobe Illustrator</p>
+                            <p class="timeline-event-thumbnail">Adobe Photoshop</p><p class="timeline-event-thumbnail m-l-10">Adobe Illustrator</p>
                             <h3>Geil,Danke! GmbH</h3>
                             <h4>eines Web-Studios</h4>
                             <p><strong>Projektmanagement mit Scrum</strong>
