--- a/index.html
+++ b/index.html
@@ -140,11 +140,10 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">Adobe Photoshop</p><p class="timeline-event-thumbnail m-l-10">Adobe Illustrator</p>
-                            <h3>Geil,Danke! GmbH</h3>
-                            <h4>eines Web-Studios</h4>
-                            <p><strong>Projektmanagement mit Scrum</strong>
-                                <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
+                            <p class="timeline-event-thumbnail">Adobe Photoshop</p><p class="timeline-event-thumbnail m-l-10">Adobe Illustrator</p><p class="timeline-event-thumbnail m-l-10">Adobe InDesign</p><p class="timeline-event-thumbnail m-l-10">Adobe xD</p><p class="timeline-event-thumbnail m-l-10">Adobe Acrobat</p><br />
+                            <p class="timeline-event-thumbnail">Sketch</p><p class="timeline-event-thumbnail m-l-10">InVision</p><p class="timeline-event-thumbnail m-l-10">Figma</p><br />
+                            <p class="timeline-event-thumbnail">Sketch Up Pro 3D</p><p class="timeline-event-thumbnail m-l-10">Lumion 3D</p><p class="timeline-event-thumbnail m-l-10">Keyshot 3D</p><br />
+                            
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
