--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="col-md-12">
                 <h4>03</h4>
-                <h1 class="size-50">My <br /> Software skills</h1>
+                <h1 class="size-50">My skills</h1>
                 <div class="h-50"></div>
             </div>
             <div class="col-md-12">
@@ -140,6 +140,7 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
+                            <h3>Software skills</h3>
                             <p class="timeline-event-thumbnail">Adobe Photoshop</p><p class="timeline-event-thumbnail m-l-10">Adobe Illustrator</p><p class="timeline-event-thumbnail m-l-10">Adobe InDesign</p><p class="timeline-event-thumbnail m-l-10">Adobe xD</p><p class="timeline-event-thumbnail m-l-10">Adobe Acrobat</p><br />
                             <p class="timeline-event-thumbnail">Sketch</p><p class="timeline-event-thumbnail m-l-10">InVision</p><p class="timeline-event-thumbnail m-l-10">Figma</p><br />
                             <p class="timeline-event-thumbnail">Sketch Up Pro 3D</p><p class="timeline-event-thumbnail m-l-10">Lumion 3D</p><p class="timeline-event-thumbnail m-l-10">Keyshot 3D</p><br />
