--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <ul class="timeline">
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
-                        <h3>Software skills</h3>
+                        <h3 class="m-l-80">Software skills</h3>
                         <div class="timeline-event-copy">
                             
                             <p class="timeline-event-thumbnail">Adobe Photoshop</p><p class="timeline-event-thumbnail m-l-10">Adobe Illustrator</p><p class="timeline-event-thumbnail m-l-10">Adobe InDesign</p><p class="timeline-event-thumbnail m-l-10">Adobe xD</p><p class="timeline-event-thumbnail m-l-10">Adobe Acrobat</p><br />
