--- a/index.html
+++ b/index.html
@@ -145,26 +145,25 @@
                             <p class="timeline-event-thumbnail">Adobe Photoshop</p><p class="timeline-event-thumbnail m-l-10">Adobe Illustrator</p><p class="timeline-event-thumbnail m-l-10">Adobe InDesign</p><p class="timeline-event-thumbnail m-l-10">Adobe xD</p><p class="timeline-event-thumbnail m-l-10">Adobe Acrobat</p><br />
                             <p class="timeline-event-thumbnail">Sketch</p><p class="timeline-event-thumbnail m-l-10">InVision</p><p class="timeline-event-thumbnail m-l-10">Figma</p><br />
                             <p class="timeline-event-thumbnail">Sketch Up Pro 3D</p><p class="timeline-event-thumbnail m-l-10">Lumion 3D</p><p class="timeline-event-thumbnail m-l-10">Keyshot 3D</p><br />
-                            
+                            <p class="timeline-event-thumbnail">Atom</p><p class="timeline-event-thumbnail m-l-10">Bracketss</p><p class="timeline-event-thumbnail m-l-10">NetBeans</p><p class="timeline-event-thumbnail m-l-10">Visual Studio Code</p><br />
+                            <p class="timeline-event-thumbnail">Trello</p><p class="timeline-event-thumbnail m-l-10">Basecamp</p><p class="timeline-event-thumbnail m-l-10">Slack</p><p class="timeline-event-thumbnail m-l-10">Miro</p><br />
+                            <p class="timeline-event-thumbnail">Microsoft Office</p><p class="timeline-event-thumbnail m-l-10">Microsoft Windows</p><p class="timeline-event-thumbnail m-l-10">Apple macOS</p><br />                   
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
                         <label class="timeline-event-icon"></label>
+                        <h3 class="m-l-80">Developing skills</h3>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
-                            <h3>Freelancer</h3>
-                            <h4>Designer und Autor</h4>
-                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
+                                <p class="timeline-event-thumbnail">WordPress</p><p class="timeline-event-thumbnail m-l-10">Magento 2</p><p class="timeline-event-thumbnail m-l-10">Shopify</p><p class="timeline-event-thumbnail m-l-10">Versacommerce</p><p class="timeline-event-thumbnail m-l-10">HTML & CSS</p><br />
+                           
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
                         <label class="timeline-event-icon"></label>
+                        <h3 class="m-l-80">Design skills</h3>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2014</p>
-                            <h3>konplan gmbh</h3>
-                            <h4>IT-Consultant</h4>
-                            <p><strong>Systemarchitektur, Consulting</strong>
-                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                            <h4>Print design</h4>
+                            <p><strong>Flyers, </strong><strong>Brochures, </strong><strong>Catalogs, </strong><strong>Business card, </strong><strong>T-Shirt, </strong><strong>Product labels, </strong><strong>Product packaging, </strong><strong>Bilboards, </strong><strong>Window shop branding, </strong><strong>Trucks and cars branding, </strong><strong>Posters, </strong><strong>Sale sheet, </strong><strong>Post cards, </strong></p>
                         </div>
                     </li>
                 </ul>
