--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <label class="timeline-event-icon"></label>
                         <h3 class="m-l-80">Developing skills</h3>
                         <div class="timeline-event-copy">
-                                <p class="timeline-event-thumbnail">WordPress</p><p class="timeline-event-thumbnail m-l-10">Magento 2</p><p class="timeline-event-thumbnail m-l-10">Shopify</p><p class="timeline-event-thumbnail m-l-10">Versacommerce</p><p class="timeline-event-thumbnail m-l-10">HTML & CSS</p><br />
+                                <p class="timeline-event-thumbnail">WordPress</p><p class="timeline-event-thumbnail m-l-10">Magento 2</p><p class="timeline-event-thumbnail m-l-10">Shopify</p><p class="timeline-event-thumbnail m-l-10">Versacommerce</p><p class="timeline-event-thumbnail m-l-10">WIX</p><p class="timeline-event-thumbnail m-l-10">HTML & CSS</p><br />
                            
                         </div>
                     </li>
@@ -163,7 +163,11 @@
                         <h3 class="m-l-80">Design skills</h3>
                         <div class="timeline-event-copy">
                             <h4>Print design</h4>
-                            <p><strong>Flyers, </strong><strong>Brochures, </strong><strong>Catalogs, </strong><strong>Business card, </strong><strong>T-Shirt, </strong><strong>Product labels, </strong><strong>Product packaging, </strong><strong>Bilboards, </strong><strong>Window shop branding, </strong><strong>Trucks and cars branding, </strong><strong>Posters, </strong><strong>Sale sheet, </strong><strong>Post cards, </strong></p>
+                            <p><strong>Flyers, </strong><strong>Brochures, </strong><strong>Catalogs, </strong><strong>Business card, </strong><strong>T-Shirt, </strong><strong>Product labels, </strong><strong>Product packaging, </strong><strong>Bilboards, </strong><strong>Window shop branding, </strong><strong>Trucks and cars branding, </strong><strong>Posters, </strong><strong>Sale sheet, </strong><strong>Post cards, </strong><strong>Logo design</strong></p><br />
+                            <h4>Web design</h4>
+                            <p><strong>Website design, </strong><strong>Website developing, </strong><strong>Wireframing, </strong><strong>Prototyping for website design, </strong><strong>Prototyping for mobile design, </strong><strong>Banners</strong></p><br />
+                            <h4>3D design</h4>
+                            <p><strong>Furniture design, </strong><strong>Building design, </strong><strong>Interier and exterier modeling, </strong><strong>3D rendering</strong></p>
                         </div>
                     </li>
                 </ul>
