--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                         <h3 class="m-l-80">Design skills</h3>
                         <div class="timeline-event-copy">
                             <h4>Print design</h4>
-                            <p><strong>Flyers, </strong><strong>Brochures, </strong><strong>Catalogs, </strong><strong>Business card, </strong><strong>T-Shirt, </strong><strong>Product labels, </strong><strong>Product packaging, </strong><strong>Bilboards, </strong><strong>Window shop branding, </strong><strong>Trucks and cars branding, </strong><strong>Posters, </strong><strong>Sale sheet, </strong><strong>Post cards, </strong><strong>Logo design</strong></p><br />
+                            <p>Flyers, Brochures, Catalogs, Business card, T-Shirt, Product labels, Product packaging, Bilboards, Window shop branding, Trucks and cars branding, Posters, Sale sheet, Post cards, Logo design</p><br />
                             <h4>Web design</h4>
-                            <p><strong>Website design, </strong><strong>Website developing, </strong><strong>Wireframing, </strong><strong>Prototyping for website design, </strong><strong>Prototyping for mobile design, </strong><strong>Banners</strong></p><br />
+                            <p>Website design, Website developing, Wireframing, Prototyping for website design, Prototyping for mobile design, Banners</p><br />
                             <h4>3D design</h4>
-                            <p><strong>Furniture design, </strong><strong>Building design, </strong><strong>Interier and exterier modeling, </strong><strong>3D rendering</strong></p>
+                            <p>Furniture design, Building design, Interier and exterier modeling, 3D rendering</p>
                         </div>
                     </li>
                 </ul>
