--- a/index.html
+++ b/index.html
@@ -94,11 +94,15 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2016 - Present</p>
-                            <h3>Geil,Danke! GmbH</h3>
-                            <h4>eines Web-Studios</h4>
-                            <p><strong>Projektmanagement mit Scrum</strong>
-                                <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
+                            <p class="timeline-event-thumbnail">January 2016 - Present</p>
+                            <h3>WEB & GRAPHIC DESIGNER</h3>
+                            <h4>stilpolster.de and stilraum-manufakture.de</h4>
+                            <p><strong>Web & Print design for marketing, special events, and corporate identity, Branding, Project Menagment Corporate & self-initiated management of projects.</strong>
+                                <br>
+                                <li>Web design and develop in to the Magento 2 (front-end)</li>
+                                <li>Web design and develop in to the WordPress (front-end)</li>
+                                <li>Branding, Catalogs, Flyers, Newspapers promotions</li>
+                                <li>3D drawing and rendering</li></p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
