--- a/index.html
+++ b/index.html
@@ -98,11 +98,14 @@
                             <h3>WEB & GRAPHIC DESIGNER</h3>
                             <h4>stilpolster.de and stilraum-manufakture.de</h4>
                             <p><strong>Web & Print design for marketing, special events, and corporate identity, Branding, Project Menagment Corporate & self-initiated management of projects.</strong>
-                                <br>
-                                <li>Web design and develop in to the Magento 2 (front-end)</li>
-                                <li>Web design and develop in to the WordPress (front-end)</li>
-                                <li>Branding, Catalogs, Flyers, Newspapers promotions</li>
-                                <li>3D drawing and rendering</li></p>
+                                <br>•
+                                Web design and develop in to the Magento 2 (front-end)
+                                •
+                                Web design and develop in to the WordPress (front-end)
+                                •
+                                Branding, Catalogs, Flyers, Newspapers promotions
+                                •
+                                3D drawing and rendering</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
