--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                             <h3>WEB & GRAPHIC DESIGNER</h3>
                             <h4>stilpolster.de and stilraum-manufakture.de</h4>
                             <p><strong>Web & Print design for marketing, special events, and corporate identity, Branding, Project Menagment Corporate & self-initiated management of projects.</strong>
-                                <br>•
-                                Web design and develop in to the Magento 2 (front-end)
+                                <br><br>•
+                                Web design and develop in to the Magento 2 (front-end)<br>
                                 •
-                                Web design and develop in to the WordPress (front-end)
+                                Web design and develop in to the WordPress (front-end)<br>
                                 •
-                                Branding, Catalogs, Flyers, Newspapers promotions
+                                Branding, Catalogs, Flyers, Newspapers promotions<br>
                                 •
                                 3D drawing and rendering</p>
                         </div>
