--- a/index.html
+++ b/index.html
@@ -96,12 +96,14 @@
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">January 2016 - Present</p>
                             <h3>WEB & GRAPHIC DESIGNER</h3>
-                            <h4>stilpolster.de and stilraum-manufakture.de</h4>
+                            <h4>stilpolster.de & stilraum-manufakture.de</h4>
                             <p><strong>Web & Print design for marketing, special events, and corporate identity, Branding, Project Menagment Corporate & self-initiated management of projects.</strong>
                                 <br><br>•
                                 Web design and develop in to the Magento 2 (front-end)<br>
                                 •
                                 Web design and develop in to the WordPress (front-end)<br>
+                                •
+                                UI/UX Design<br>
                                 •
                                 Branding, Catalogs, Flyers, Newspapers promotions<br>
                                 •
@@ -111,20 +113,30 @@
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
-                            <h3>Freelancer</h3>
-                            <h4>Designer und Autor</h4>
-                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
+                            <p class="timeline-event-thumbnail">January 2014 - January 2016</p>
+                            <h3>Graphic Desiner</h3>
+                            <h4>Agrotehna</h4>
+                            <p><strong>Brand Creation, Redesign, and consulting for local businesses, startups, and corporations. Web & Print design for marketing, special events, and corporate identity.</strong>
+                                <br><br>•
+                                Packaging design for home appliances
+                                •
+                                Bicycle design
+                                •
+                                Flyers, Brochures, Posters, Post Cards, Branding: Shops, Cars, Trucks.
+                            </p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2014</p>
-                            <h3>konplan gmbh</h3>
-                            <h4>IT-Consultant</h4>
-                            <p><strong>Systemarchitektur, Consulting</strong>
-                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                            <p class="timeline-event-thumbnail">January 2010 - January 2014</p>
+                            <h3>Graphic Designer</h3>
+                            <h4>Planet Interactive</h4>
+                            <p><strong>Web & Print design for marketing, special events, and corporate identity.</strong>
+                                <br><br>•
+                                Website Design and develop HTML/CSS
+                                •
+                                UI/UX Design</p>
                         </div>
                     </li>
                 </ul>
