--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                             <h4>Agrotehna</h4>
                             <p><strong>Brand Creation, Redesign, and consulting for local businesses, startups, and corporations. Web & Print design for marketing, special events, and corporate identity.</strong>
                                 <br><br>•
-                                Packaging design for home appliances
+                                Packaging design for home appliances<br>
                                 •
-                                Bicycle design
+                                Bicycle design<br>
                                 •
                                 Flyers, Brochures, Posters, Post Cards, Branding: Shops, Cars, Trucks.
                             </p>
@@ -134,9 +134,18 @@
                             <h4>Planet Interactive</h4>
                             <p><strong>Web & Print design for marketing, special events, and corporate identity.</strong>
                                 <br><br>•
-                                Website Design and develop HTML/CSS
+                                Website Design and develop HTML/CSS<br>
                                 •
                                 UI/UX Design</p>
+                        </div>
+                    </li>
+                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">2012 - Present</p>
+                            <h3>Freelancer</h3>
+                            <h4>Upwork</h4>
+                            <p><strong>Web & Print design and developing</strong></p>
                         </div>
                     </li>
                 </ul>
