--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>Dejan Tomikj</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap -->
-    <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
-    <!-- <link href="css/aos.css" rel="stylesheet"> -->
+    <link href="css/aos.css" rel="stylesheet">
     <!-- main style -->
     <link href="css/style.css" rel="stylesheet">
     
@@ -383,7 +383,7 @@
     <!--  plugins  -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/plugins.js"></script>
-    <!-- <script src="js/aos.js"></script> -->
+    <script src="js/aos.js"></script>
     <script src="js/jquery.form.js"></script>
     <script src="js/jquery.validate.min.js"></script>
 
