--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@ require('constant.php');
                             
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 print">
-                                <a id="demo03" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/02.jpg" alt="image" class="img-responsive" />
+                                <a id="demo03" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/stilpolster-wendesign.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Photorealistic smartwatch</span> <em>Photography</em> </div>
+                                            <div class="item_info"> <span>Magetno 2 / Web Design</span> <em>stilpolster.de</em> </div>
                                         </div>
                                     </div>
                                 </a>
