--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@ require('constant.php');
                                 </div>
                                 <!-- end single work -->
                             
-                            <!-- single work -->
-                            <div class="col-md-4 col-sm-6 print">
-                                <a id="demo03" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/stilpolster-wendesign.jpg" alt="image" class="img-responsive" />
+                             <!-- single work -->
+                             <div class="col-md-4 col-sm-6  webdesign">
+                                <a id="stilpolster" href="stilpolster.html" class="portfolio_item"> <img src="img/portfolio/stilpolster-webdesign.jpg" alt="stilpolster-webdesign" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Magetno 2 / Web Design</span> <em>stilpolster.de</em> </div>
+                                            <div class="item_info"> <span> Magento 2 / Website design</span> <em>stilpolster</em> </div>
                                         </div>
                                     </div>
                                 </a>
