--- a/stilpolster.html
+++ b/stilpolster.html
@@ -61,7 +61,8 @@
                         <div class="h-50"></div>
                         <p>Website design with Sketch and after that front-end developing in to Magento 2</p>
                         <br />
-                        <br /> <img src="img/portfolio/stilpolster-webdesign.jpg" alt="stilpolster-webdesign" class="img-responsive" />
+                        <br /> <img src="img/portfolio/stilpolster-webdesign.jpg" alt="stilpolster-webdesign" class="img-responsive" /><br /> 
+                        <img src="img/portfolio/stilpolster-webdesign-configurator.jpg" alt="stilpolster-webdesign-configurator" class="img-responsive" />
                         <br />
                         <br />
                       </div>
