--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ require('constant.php');
                                 <a id="alma-lichtdesign" href="alma-lichtdesign.html" class="portfolio_item"> <img src="img/portfolio/alma-lichtdesign.jpg" alt="alma-lichtdesign-website-design" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>WordPress Web Design</span> <em>alma-lichtdesign</em> </div>
+                                            <div class="item_info"> <span>WordPress / Web Design</span> <em>alma-lichtdesign</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -248,6 +248,18 @@ require('constant.php');
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6  webdesign">
                                 <a id="blockestates" href="blockestates.html" class="portfolio_item"> <img src="img/portfolio/blockestates-website-design-mockup.jpg" alt="blockestates-website-design" class="img-responsive" />
+                                    <div class="portfolio_item_hover">
+                                        <div class="portfolio-border clearfix">
+                                            <div class="item_info"> <span> WordPress / Website design</span> <em>blockestates</em> </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- end single work -->
+
+                            <!-- single work -->
+                            <div class="col-md-4 col-sm-6  webdesign">
+                                <a id="pixelnetwork" href="pixelnetwork.html" class="portfolio_item"> <img src="img/portfolio/pixelnetwork-website-design-mockup.jpg" alt="pixelnetwork-website-design" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span> WordPress / Website design</span> <em>blockestates</em> </div>
