--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ require('constant.php');
                                 <a id="yourwater" href="yourwater.html" class="portfolio_item"> <img src="img/portfolio/your-water-website-design-mockup.jpg" alt="yourwater-website-design" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span> WordPress / Website design</span> <em>blockestates</em> </div>
+                                            <div class="item_info"> <span> Adobe xD / Website design</span> <em>yourwater</em> </div>
                                         </div>
                                     </div>
                                 </a>
