--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ require('constant.php');
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="Graphic and Web Designer">
+    <meta property="og:image" content="img/about-img.jpg">
     <meta name="author" content="Dejan Tomikj">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,GraphicDesigner,WebDesigner,UI,UX">
     <meta name="description" content="UI/UX Designer">
