--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@ require('constant.php');
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Graphic and Web Designer">
-    <meta property="og:image" content="img/about-img.jpg">
     <meta name="author" content="Dejan Tomikj">
+    <meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,GraphicDesigner,WebDesigner,UI,UX">
-    <meta name="description" content="UI/UX Designer">
+    <meta name="description" content="Graphic and Web Designer">
     <title>Dejan Tomikj</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap -->
@@ -776,9 +775,9 @@ require('constant.php');
 
     <!--  main script  -->
     <script src="js/custom.js"></script>
-  <script>document.addEventListener("contextmenu", function(e){
+  <!-- <script>document.addEventListener("contextmenu", function(e){
         e.preventDefault();
-    }, false);</script>
+    }, false);</script> -->
     
 </body>
 
