--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ require('constant.php');
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Dejan Tomikj">
-    <meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
+    <meta property="og:image" content="https://dejantomikj.github.io/img/about-img.jpg">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,GraphicDesigner,WebDesigner,UI,UX">
     <meta name="description" content="Graphic and Web Designer">
     <title>Dejan Tomikj</title>
@@ -775,9 +775,9 @@ require('constant.php');
 
     <!--  main script  -->
     <script src="js/custom.js"></script>
-  <!-- <script>document.addEventListener("contextmenu", function(e){
+  <script>document.addEventListener("contextmenu", function(e){
         e.preventDefault();
-    }, false);</script> -->
+    }, false);</script>
     
 </body>
 
