--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ require('constant.php');
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Dejan Tomikj">
-    <meta property="og:image" content="https://dejantomikj.github.io/img/about-img.jpg">
+    <meta property="og:image" content="https://dejantomikj.github.io/img/dejan-tomikj.jpg">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,GraphicDesigner,WebDesigner,UI,UX">
     <meta name="description" content="Graphic and Web Designer">
     <title>Dejan Tomikj</title>
@@ -80,7 +80,7 @@ require('constant.php');
             </div>
             <div class="col-md-6 about-img-div">
                 <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
-                <img src="img/about-img.jpg" width="400" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
+                <img src="img/dejan-tomikj.jpg" width="400" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
             </div>
         </div>
     </div>
