--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ require('constant.php');
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Dejan Tomikj">
+    <meta name="author" content="Dejan Tomikj - Graphic and Web Designer">
     <meta property="og:image" content="https://dejantomikj.github.io/img/dejan-tomikj.jpg">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,GraphicDesigner,WebDesigner,UI,UX">
     <meta name="description" content="Graphic and Web Designer">
