--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ require('constant.php');
     <!-- main style -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/form.css" rel="stylesheet">
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 
     
