--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@ require('constant.php');
             </div>
            <div class="col-md-8" data-aos="fade-up">
 
-           <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="dejantomikj"><a class="LI-simple-link" href='https://mk.linkedin.com/in/dejantomikj?trk=profile-badge'>Dejan Tomikj</a></div>
+           <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="dejantomikj"><a class="LI-simple-link" href='https://mk.linkedin.com/in/dejantomikj?trk=profile-badge'>Dejan Tomikj</a></div>
             </div> 
         </div>
     </div>
