--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ require('constant.php');
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4>Dejan Tomikj</h4>
-                    <h1 style="line-height: 107px;">Graphic and <br> Web Designer</h1> </div>
+                    <h4 style="opacity: 0">Dejan Tomikj</h4>
+                    <h1 style="opacity: 0">Graphic and Web Designer</h1> </div>
             </div>
         </div>
     </div>
@@ -776,9 +776,9 @@ require('constant.php');
 
     <!--  main script  -->
     <script src="js/custom.js"></script>
-  <script>document.addEventListener("contextmenu", function(e){
+  <!-- <script>document.addEventListener("contextmenu", function(e){
         e.preventDefault();
-    }, false);</script>
+    }, false);</script> -->
     
 </body>
 
