--- a/index.html
+++ b/index.html
@@ -764,9 +764,9 @@ require('constant.php');
 
     <!--  main script  -->
     <script src="js/custom.js"></script>
-  <!-- <script>document.addEventListener("contextmenu", function(e){
+  <script>document.addEventListener("contextmenu", function(e){
         e.preventDefault();
-    }, false);</script> -->
+    }, false);</script>
     
 </body>
 
