--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ require('constant.php');
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6  webdesign">
-                                <a id="alma-lichtdesign" href="alma-lichtdesign.html" class="portfolio_item"> <img src="img/portfolio/alma-lichtdesign.jpg" alt="alma-lichtdesign-website-design" class="img-responsive" />
+                                <a id="alma-lichtdesign" href="alma-lichtdesign" class="portfolio_item"> <img src="img/portfolio/alma-lichtdesign.jpg" alt="alma-lichtdesign-website-design" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Website design<br />Alma-licht</span> <em>Sketch / InVision<br />WordPress</em> </div>
