--- a/perfumepackaging.html
+++ b/perfumepackaging.html
@@ -38,7 +38,7 @@
     <header class="navbar-fixed-top" style="text-align: left">
         <nav>
             <ul>
-                <li><a href="index.html#perfumepackaging"><i class="ion-arrow-left-a" style="font-size: 3em;"></i> </a></li>
+                <li><a href="https://dejantomikj.github.io/#perfumepackaging"><i class="ion-arrow-left-a" style="font-size: 3em;"></i> </a></li>
                 
             </ul>
         </nav>
