--- a/stilpolster.html
+++ b/stilpolster.html
@@ -38,7 +38,7 @@
     <header class="navbar-fixed-top" style="text-align: right">
         <nav>
             <ul style="background-color: lightgrey;">
-                <li><a href="index.html#stilpolster">close this project <i class="ion-close-round"></i> </a></li>
+                <li><a href="https://dejantomikj.github.io/#stilpolster">close this project <i class="ion-close-round"></i> </a></li>
                 
             </ul>
         </nav>
