--- a/laetitia3d.html
+++ b/laetitia3d.html
@@ -38,7 +38,7 @@
     <header class="navbar-fixed-top" style="text-align: right">
         <nav>
             <ul style="background-color: lightgrey;">
-                <li><a href="index.html#laetitia3d">close this project <i class="ion-close-round"></i> </a></li>
+                <li><a href="https://dejantomikj.github.io/#laetitia3d">close this project <i class="ion-close-round"></i> </a></li>
                 
             </ul>
         </nav>
