--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ require('constant.php');
                     <li data-aos="fade-up" class="noselect">Versacommerce</li>
                     <li data-aos="fade-up" class="noselect">WIX</li>
                     <li data-aos="fade-up" class="noselect">HTML/CSS</li>
-                    <li data-aos="fade-up" class="noselect">JavaScript-basic</li>
+                    <li data-aos="fade-up" class="noselect">JavaScript (basic)</li>
                 </ul>
         </div>
 
