--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@ require('constant.php');
                         <li data-aos="fade-up" class="noselect">Sketch</li>
                         <li data-aos="fade-up" class="noselect">InVision</li>
                         <li data-aos="fade-up" class="noselect">Figma</li>
+                        <br>
+                        <li data-aos="fade-up" class="noselect">Drawing</li>
+                        <li data-aos="fade-up" class="noselect">Photography</li>
                     </ul>
             </div>
 
