--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ require('constant.php');
                             <nav class="categories">
                                 <ul class="portfolio_filter">
                                     <li><a href="" class="active" data-filter="*">All</a></li>
-                                    <li><a href="" data-filter=".webdesign">Web Deisgn</a></li>
+                                    <li><a href="" data-filter=".webdesign">Web Design</a></li>
                                     <li><a href="" data-filter=".print">Print</a></li>
                                     <li><a href="" data-filter=".logo">Logo</a></li>
                                     <li><a href="" data-filter=".3d">3D</a></li>
