--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ require('constant.php');
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Dejan Tomikj - Graphic and Web Designer">
    
-    <meta property="og:image" content="https://dejantomikj.github.io/img/dejan-tomikj.jpg">
+   <!-- <meta property="og:image" content="https://dejantomikj.github.io/img/dejan-tomikj.jpg"> -->
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,GraphicDesigner,WebDesigner,UI,UX">
     <meta name="description" content="Graphic and Web Designer">
     <title>Dejan Tomikj</title>
