--- a/stilpolster.html
+++ b/stilpolster.html
@@ -57,7 +57,7 @@
                         <h2>Web design and front-end developing</h2>
                         <h3>Sketch and InVision</h3>
                         <h3>HTML / CSS</h3>
-                        <a href="http://dev.edmvsolutions.de/test/" target="blank">www.dev.edmvsolutions.de/test/</a>
+                        <a href="http://dev.edmvsolutions.de/test/" target="blank">www.stilpolster.de</a>
                         
                         <div class="h-50"></div>
                         <p>Website design with Sketch and after that front-end developing in to Magento 2</p>
