--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ require('constant.php');
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6  webdesign">
-                                <a id="cleanmyshow" href="clean-my-shoe" class="portfolio_item"> <img src="img/portfolio/clean-my-shoe-mockup.jpg" alt="clean-my-shoe" class="img-responsive" />
+                                <a id="cleanmyshoe" href="clean-my-shoe" class="portfolio_item"> <img src="img/portfolio/clean-my-shoe-mockup.jpg" alt="clean-my-shoe" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span> Website design<br />Clean my shoe</span> <em>Sketch</em> </div>
