--- a/index.html
+++ b/index.html
@@ -172,9 +172,13 @@ require('constant.php');
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">Jan 2016 - Present</p>
-                            <h3>EDMV Solutions</h3>
-                            <h4>UI/UX Designer</h4>
-                            <p><strong>Web & Print design for marketing, special events, and corporate identity, Branding, Project Menagment Corporate & self-initiated management of projects. </strong></p>
+                            <h3>stilpolster.de & stilraum-manufaktur.de</h3>
+                            <h4>Graphic and Web Designer</h4>
+                            <p><strong>Web & Print design for marketing, special events, and corporate identity, Branding, Project Managment Corporate & self-initiated management of projects.</strong>
+<br />• Web design and develop in to the Magento 2 (front-end)<br />
+• Web design and develop in to the WordPress (front-end)<br />
+• Branding, Catalogs, Flyers, Newspapers promotions<br />
+• 3D drawing and rendering</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
