--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ require('constant.php');
                             <h3>stilpolster.de & stilraum-manufaktur.de</h3>
                             <h4>Graphic and Web Designer</h4>
                             <p><strong>Web & Print design for marketing, special events, and corporate identity, Branding, Project Managment Corporate & self-initiated management of projects.</strong>
-<br />• Web design and develop in to the Magento 2 (front-end)<br />
+<br /><br />• Web design and develop in to the Magento 2 (front-end)<br />
 • Web design and develop in to the WordPress (front-end)<br />
 • Branding, Catalogs, Flyers, Newspapers promotions<br />
 • 3D drawing and rendering</p>
@@ -187,7 +187,10 @@ require('constant.php');
                             <p class="timeline-event-thumbnail">Jan 2014 - Jan 2016</p>
                             <h3>Agrotehna</h3>
                             <h4>Graphic Designer</h4>
-                            <p><strong>Brand Creation, Redesign, and consulting for local businesses, startups, and corporations. Web & Print design for marketing, special events, and corporate identity.</strong></p>
+                            <p><strong>Brand Creation, Redesign, and consulting for local businesses, startups, and corporations. Web & Print design for marketing, special events, and corporate identity.</strong>
+<br /><br />• Packaging design for home appliances
+<br />• Bicycle design
+<br />• Flyers, Brochures, Posters, Post Cards, Branding: Shops, Cars, Trucks.</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
@@ -196,7 +199,9 @@ require('constant.php');
                             <p class="timeline-event-thumbnail">Apr 2010 - Jan 2014</p>
                             <h3>Planet Interactive</h3>
                             <h4>Graphic Designer</h4>
-                            <p><strong>Web & Print design for marketing, special events, and corporate identity. </strong></p>
+                            <p><strong>Web & Print design for marketing, special events, and corporate identity.</strong>
+<br /><br />• Website Design
+<br />• UI/UX Design</p>
                         </div>
                     </li>
                 </ul>
