--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@ require('constant.php');
                         <li data-aos="fade-up" class="noselect">Adobe Photoshop CC</li>
                         <li data-aos="fade-up" class="noselect">Adobe Illustrator CC</li>
                         <li data-aos="fade-up" class="noselect">Adobe InDesign CC</li>
-                        <li data-aos="fade-up" class="noselect">Adobe Premiere Pro CC</li>
                         <li data-aos="fade-up" class="noselect">Adobe xD CC</li>
-                        <li data-aos="fade-up" class="noselect">Adobe Acrobar</li>
+                        <li data-aos="fade-up" class="noselect">Adobe Premiere Pro CC</li>
                         <br>
                         <li data-aos="fade-up" class="noselect">Sketch</li>
                         <li data-aos="fade-up" class="noselect">InVision</li>
@@ -179,7 +178,7 @@ require('constant.php');
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">Jan 2016 - Present</p>
+                            <p class="timeline-event-thumbnail">Jan 2016 - Apr 2020</p>
                             <h3>stilpolster.de & stilraum-manufaktur.de</h3>
                             <h4>Graphic and Web Designer</h4>
                             <p><strong>Web & Print design for marketing, special events, and corporate identity, Branding, Project Managment Corporate & self-initiated management of projects.</strong>
