--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ require('constant.php');
                                     <a id="stilraum-objekteinrichtung" href="stilraum-objekteinrichtung" class="portfolio_item"> <img src="img/portfolio/stilraum-objekteinrichtung.jpg" alt="stilraum-objekteinrichtung-website-design" class="img-responsive" />
                                         <div class="portfolio_item_hover">
                                             <div class="portfolio-border clearfix">
-                                                <div class="item_info"> <span>Website design<br />stilraum-objekteinrichtung</span> <em>HTML / CSS</em> </div>
+                                                <div class="item_info"> <span>Website design<br />stilraum-objekteinrichtung</span> <em>HTML / CSS</em> <span>stilraum-manufaktur-shop</span> <em>Shopify</em> </div>
                                             </div>
                                         </div>
                                     </a>
