--- a/stilraum-objekteinrichtung.html
+++ b/stilraum-objekteinrichtung.html
@@ -55,9 +55,9 @@
                     <div class="col-md-8 col-md-offset-2">
                             
                         <h2>Web design and  developing</h2>
-                        <h3>stilraum-objekteinrichtung.de - HTML / CSS</h3>
+                        <h3>stilraum objekteinrichtung - HTML / CSS</h3>
                         <a href="https://stilraum-objekteinrichtung.de" target="blank">www.stilraum-objekteinrichtung.de</a>
-                        <h3>Stilraum-manufaktur-shop - Shopify / HTML / CSS</h3>
+                        <h3>stilraum manufaktur shop - Shopify / HTML / CSS</h3>
                         <a href="https://stilraum-manufaktur-shop.de" target="blank">www.stilraum-manufaktur-shop.de</a>
                         
                         <div class="h-50"></div>
