--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ require('constant.php');
                                 <a id="stilpolster" href="stilpolster" class="portfolio_item"> <img src="img/portfolio/stilpolster-webdesign-mockup.jpg" alt="stilpolster-webdesign" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Website design<br />Stilpolster</span> <em>Magento 2<br />Sketch / InVision</em><br /> <em>Shopify<br />HTMLS / CSS</em></div>
+                                            <div class="item_info"> <span>Website design<br />Stilpolster</span> <em>Magento 2<br />Sketch / InVision</em><br /> <em>Shopify<br />HTML / CSS</em></div>
                                         </div>
                                     </div>
                                 </a>
