--- a/pixelnetwork.html
+++ b/pixelnetwork.html
@@ -54,7 +54,7 @@
                 <div class="portfolio-padding">
                     <div class="col-md-8 col-md-offset-2">
                             
-                        <h2>Web design and Wordpress developing</h2>
+                        <h2>Web design and WordPress developing</h2>
                         <h3>Sketch / InVision</h3>
                         <a href="http://139.59.109.237" target="blank">www.pixelnetworks.com</a>
                         
