--- a/alma-lichtdesign.html
+++ b/alma-lichtdesign.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Dejan Tomikj">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,GraphicDesigner,WebDesigner,UI,UX">
     <meta name="description" content="UI/UX Designer">
-    <title>Dejan Tomikj</title>
+    <title>alma-lichtdesign</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
