--- a/thesotryway.html
+++ b/thesotryway.html
@@ -18,7 +18,15 @@
     <!-- main style -->
     <link href="css/style.css" rel="stylesheet">
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TYS195211L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TYS195211L');
+</script>
 </head>
 
 <body>
