--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ require('constant.php');
     <!-- ./home -->
     
     <!-- about -->
-    <div class="section" id="about">
+    <div class="section" id="about" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="col-md-6" data-aos="fade-up">
                 <h4>01</h4>
