--- a/index.html
+++ b/index.html
@@ -62,15 +62,24 @@ require('constant.php');
     </header>
     <!-- ./header -->
     
-  
+    <!-- home -->
+    <div class="section" id="home" data-stellar-background-ratio="0.5">
+        <div class="container">
+            <div class="disply-table">
+                <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
+                    <h4 style="opacity: 0">Dejan Tomikj</h4>
+                    <h1 style="opacity: 0">Graphic and Web Designer</h1></div>
+            </div>
+        </div>
+    </div>
+    <!-- ./home -->
     
     <!-- about -->
     <div class="section" id="about">
         <div class="container">
             <div class="col-md-6" data-aos="fade-up">
                 <h4>01</h4>
-                <h1 class="size-50">Dejan Tomikj</h1>
-                <h2 class="size-50">Know <br /> About me</h2>
+                <h1 class="size-50">Know <br /> About me</h1>
                 <div class="h-50"></div>
                 <p class="noselect">I'm part of the professional graphic designer's world 10 years already.<br> The combination of my practical work and solid educational experience has prepared me for showing an immediate contribution to your needs.</p>
                 <p class="noselect">My goals as a web and graphic designer have always been to create more usable and elegant produts on the web. My experience and knowlege provide me with the capabilyty to handle and deliver tasks in a beautiful yet effecient way.</p>
